Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pand"
+    "import pandas as pd\n",
+    "df ="
    ]
   },
   {
