Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = read_csv('lego_sets.cs')"
+    "df = read_csv('lego_sets.csv')"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = None"
+    "df.head"
    ]
   },
   {
