--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,8 @@
    ],
    "source": [
     "df.info()\n",
-    "#non Null objects or floats "
+    "#non Null objects or floats \n",
+    "#12261 rows \n"
    ]
   },
   {
