Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,8 @@
    "source": [
     "df.info()\n",
     "#non Null objects or floats \n",
-    "#12261 rows \n"
+    "#12261 rows \n",
+    "#"
    ]
   },
   {
