Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
     "df.info()\n",
     "#non Null objects or floats \n",
     "#12261 rows \n",
-    "#"
+    "#play_star_rating and prod_des"
    ]
   },
   {
