Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
     "#non Null objects or floats \n",
     "#12261 rows \n",
     "#play_star_rating and prod_desc is missing data, and some other datas \n",
-    "\n"
+    "#1.3 mb+ boi"
    ]
   },
   {
