--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer question here... I wr"
+    "Answer question here... I wrote my answer in the comments above\n"
    ]
   },
   {
