--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer questions here... 825 is the standard dev for piece cou nt. The largest set has "
+    "Answer questions here... 825 is the standard dev for piece cou nt. The largest set has 7541 pieces. THe smallest has 1. "
    ]
   },
   {
