Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.star_"
+   ]
   },
   {
    "cell_type": "markdown",
