--- a/index.ipynb
+++ b/index.ipynb
@@ -531,11 +531,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10486"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.play_star_rating."
+    "df.play_star_rating.count()"
    ]
   },
   {
@@ -550,7 +561,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df."
+   ]
   },
   {
    "cell_type": "markdown",
