--- a/index.ipynb
+++ b/index.ipynb
@@ -585,25 +585,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ages', 'list_price', 'num_reviews', 'piece_count', 'play_star_rating',\n",
-       "       'prod_desc', 'prod_id', 'prod_long_desc', 'review_difficulty',\n",
-       "       'set_name', 'star_rating', 'theme_name', 'val_star_rating', 'country'],\n",
-       "      dtype='object')"
+       "6049650.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df.piece_count.sum()"
    ]
   },
   {
