--- a/index.ipynb
+++ b/index.ipynb
@@ -646,7 +646,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.review_difficulty.u"
+   ]
   },
   {
    "cell_type": "markdown",
