Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -643,11 +643,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Average', 'Easy', 'Challenging', 'Very Easy', nan,\n",
+       "       'Very Challenging'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.review_difficulty.u"
+    "df.review_difficulty.unique()"
    ]
   },
   {
@@ -662,7 +674,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
