--- a/index.ipynb
+++ b/index.ipynb
@@ -719,7 +719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df"
+    "string_df = df.applymap(lambda x: )"
    ]
   },
   {
