--- a/index.ipynb
+++ b/index.ipynb
@@ -715,11 +715,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df.applymap(lambda x: )"
+    "string_df = df.applymap(lambda x: str(x))"
    ]
   },
   {
