Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -746,7 +746,7 @@
    ],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
-    "string_df.info()"
+    "string_df.info()\n"
    ]
   },
   {
