--- a/index.ipynb
+++ b/index.ipynb
@@ -746,7 +746,8 @@
    ],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
-    "string_df.info()\n"
+    "string_df.info()\n",
+    "string_df[]"
    ]
   },
   {
