--- a/index.ipynb
+++ b/index.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -742,12 +742,31 @@
       "dtypes: object(14)\n",
       "memory usage: 1.3+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([['6-12', '29.99', '2.0', ..., 'Angry Birds™', '4.0', 'US'],\n",
+       "       ['6-12', '19.99', '2.0', ..., 'Angry Birds™', '4.0', 'US'],\n",
+       "       ['6-12', '12.99', '11.0', ..., 'Angry Birds™', '4.1', 'US'],\n",
+       "       ...,\n",
+       "       ['7-14', '24.3878', '18.0', ..., 'THE LEGO® NINJAGO® MOVIE™',\n",
+       "        '4.5', 'PT'],\n",
+       "       ['6-14', '12.1878', '1.0', ..., 'THE LEGO® NINJAGO® MOVIE™',\n",
+       "        '5.0', 'PT'],\n",
+       "       ['6-14', '12.1878', '11.0', ..., 'THE LEGO® NINJAGO® MOVIE™',\n",
+       "        '4.8', 'PT']], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
     "string_df.info()\n",
-    "string_df[]"
+    "string_df.values"
    ]
   },
   {
